--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Scoped CSS Variables and JS</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>Actualizar CSS con<span class='hl'>JS</span></h2>
+  <h2>Actualizar CSS con JS<span class='hl'>JS</span></h2>
 
   <div class="controls">
     <label for="spacing">Spacing:</label>
@@ -21,6 +21,6 @@
 
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
   
-<script src="/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
